<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting.SettingActivity">

    <TextView
        android:id="@+id/tvbahasa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/bahasa"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvabout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tentang"
        android:layout_below="@+id/tvbahasa"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppinsbold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvlogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/keluar"
        android:layout_below="@+id/tvabout"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppinsbold"
        android:textSize="20sp"/>


</RelativeLayout>