<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".deskripsi.DetailDescActivity">

    <TextView
        android:id="@+id/detail_namapenyakit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/namapenyakit"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_detailgambar"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_below="@+id/detail_namapenyakit"
        android:layout_centerHorizontal="true"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/detail_descpenyakit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_detailgambar"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/descpenyakit"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/detail_obat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_descpenyakit"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:text="@string/obat"
        android:textSize="15sp" />



</RelativeLayout>